오픈소스:과제6

--- a/오픈소스_202111897_정민성_11주차.ipynb
+++ b/오픈소스_202111897_정민성_11주차.ipynb
@@ -1631,6 +1631,7 @@
         "Metropolis = namedtuple('Metropolis', 'name cc pop coord')\n",
         "metro_areas = [Metropolis(name, cc, pop, LatLong(lat, long))\n",
         "                for name, cc, pop, (lat, long) in metro_data]\n"
+        "name_lat = name_lat = attrgetter('name', 'coord.lat')"
       ],
       "metadata": {
         "id": "UgJ-a0pHZm7H"
@@ -1694,7 +1695,7 @@
       "cell_type": "code",
       "source": [
         "from operator import attrgetter\n",
-        "for city in sorted(metro_areas, key = attrgetter('name','coord.lat')):\n",
+        "for city in sorted(metro_areas, key = attrgetter('coord.lat')):\n",
         "    print(name_lat(city))"
       ],
       "metadata": {
