오픈소스:과제6

--- a/오픈소스_202111897_정민성_11주차.ipynb
+++ b/오픈소스_202111897_정민성_11주차.ipynb
@@ -25,7 +25,7 @@
       "metadata": {
         "id": "J3H5f9l4FTPC"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40,7 +40,7 @@
         "id": "E_uKhEBmFaSA",
         "outputId": "dd172e96-7db0-47db-90c6-e78e6de1fdd7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -67,7 +67,7 @@
         "id": "TXmqbEtTFb2K",
         "outputId": "195cacd0-d35e-4854-bcb9-e19e5455ef87"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -96,7 +96,7 @@
         "id": "i1-5xkrUFdob",
         "outputId": "78c3ed88-fbda-4c16-c4c0-c8b3d5d2ab12"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -153,7 +153,7 @@
         "id": "ZF93C1qWFf8-",
         "outputId": "695b0275-f642-4326-90c4-52d93b5bb87e"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +196,7 @@
         "id": "mKw_4TpsFj11",
         "outputId": "f58e776d-469f-4fd2-e878-2e979b0765e5"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -222,7 +222,7 @@
         "id": "cfckyVc-Fk_A",
         "outputId": "5877c67b-fc02-40f4-dcea-9b30952fae26"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -248,7 +248,7 @@
         "id": "oBt5pmwHFm9w",
         "outputId": "293f752a-3612-4af2-fcac-f9ac2ac7bc9a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,7 +277,7 @@
         "id": "pyZXoV4bFo48",
         "outputId": "7ebe08fd-96e9-4011-b218-fda40ffbfd5d"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -307,7 +307,7 @@
         "id": "iyI9SVNzF9R7",
         "outputId": "8ec2f34b-3b8a-4328-b793-ad570f3d5ff8"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -336,7 +336,7 @@
         "id": "3USMOqZfF_y4",
         "outputId": "635c3cf4-52eb-4154-d406-bdcf7cfc835f"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -363,7 +363,7 @@
         "id": "dAIpvkylGCYY",
         "outputId": "faf8ab3a-d4bd-4cdc-cb5b-b368d3a6dbdd"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -389,7 +389,7 @@
         "id": "TBUIY7noGE9Q",
         "outputId": "c383ec1a-69d0-47c4-f75e-2762ecbef163"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +415,7 @@
         "id": "wYj2lHpYGH3K",
         "outputId": "87be867e-b445-4631-8c68-1911922f6c75"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +441,7 @@
         "id": "RjD6eJLvGMuK",
         "outputId": "295d72cd-ee83-44ee-d2b1-af5ae5d8e56e"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -470,7 +470,7 @@
         "id": "mp9lrFa0GRW2",
         "outputId": "2ac8ad63-465d-47fb-e098-b1cab53cccf4"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -497,7 +497,7 @@
         "id": "9NywCB6RGogA",
         "outputId": "cda296e1-4498-4455-d3e3-0104fa55dd07"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +523,7 @@
         "id": "CSWgE6nLGrkY",
         "outputId": "43aa2677-5da6-4e66-c4a5-f46d9dc43d73"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -560,7 +560,7 @@
       "metadata": {
         "id": "-w8NqUIgHCgV"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -577,7 +577,7 @@
         "id": "Zu7houp6HDJ2",
         "outputId": "0b1c2ba2-a5a1-40d4-895d-b25d3f412a92"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -603,7 +603,7 @@
         "id": "k66bekyiHH_A",
         "outputId": "bd0d594d-57fc-4379-ae5f-98a23dd28298"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -629,7 +629,7 @@
         "id": "voz9rfMnHJAm",
         "outputId": "e453b25e-f317-44c8-85e1-ec2853bb49d4"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -656,7 +656,7 @@
         "id": "Rbr7LNloHKKl",
         "outputId": "5771311e-beb8-4e34-bd98-ee5463fbdd29"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -693,7 +693,7 @@
       "metadata": {
         "id": "noM1JNlWHK91"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -710,7 +710,7 @@
         "id": "jc8risl9H3Gc",
         "outputId": "b22b864e-abc9-4e6d-f40e-337e9011d53d"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -740,7 +740,7 @@
         "id": "6ol1trf_H6Ap",
         "outputId": "9fd94321-7487-4186-eba7-08969e50748c"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -769,7 +769,7 @@
         "id": "e5qYro8MH9VN",
         "outputId": "4473e1ec-52fc-4a27-f8bf-e0af96bccc0a"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,7 +794,7 @@
         "id": "R_QS25AVIAza",
         "outputId": "89d3ef86-2f61-4f3b-ca29-348781e24047"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -824,7 +824,7 @@
         "id": "2sH95YNSIFI2",
         "outputId": "33da6298-e6cd-4cd6-aafa-ade0e2ff6669"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -849,7 +849,7 @@
         "id": "Q2rKU5xJILqG",
         "outputId": "a4408f4e-93db-4be8-f924-c73b9ef5ccd6"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -881,7 +881,7 @@
         "id": "aVIbb3bqIOYB",
         "outputId": "8f1b2310-2a35-44e8-8246-2a517b6593cb"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -913,7 +913,7 @@
         "id": "Lk4-XumfIbrO",
         "outputId": "9f7bd3c5-e3b5-4f57-98a0-0302a1393f6e"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -945,7 +945,7 @@
         "id": "SKDft2HUIhwS",
         "outputId": "fd90d872-cc2b-40eb-a899-5929bdc5ca77"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -991,7 +991,7 @@
       "metadata": {
         "id": "XtIegQXSJPZI"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1007,7 +1007,7 @@
         "id": "LCmGYxbTJP_U",
         "outputId": "22b86728-f2af-458c-861d-662829aafeef"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1033,7 +1033,7 @@
         "id": "Q6MES4UEWvTC",
         "outputId": "ec74ff4b-1937-480c-e5aa-eec866bcd0ac"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1059,7 +1059,7 @@
         "id": "DZGjumhMWyIr",
         "outputId": "ea049119-fa41-4d37-dabf-df0a3d9599f3"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1085,7 +1085,7 @@
         "id": "PCE_cD1_W52k",
         "outputId": "908de71f-8368-43e1-d5bc-6d0497a37c89"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1114,7 +1114,7 @@
         "id": "MbsQCKNUJV3H",
         "outputId": "f251c7ad-d2f2-420b-92ce-0ad7b863338d"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1141,7 +1141,7 @@
         "id": "E3IbzY6oXA_7",
         "outputId": "0ec646d0-3034-4482-a4e1-72d2323deaec"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1171,7 +1171,7 @@
         "id": "6QEvgr7nXCUh",
         "outputId": "ccb45f23-7255-419b-e94d-b34a76079970"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1194,7 +1194,7 @@
       "metadata": {
         "id": "RGY8WsUsJVzr"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1209,7 +1209,7 @@
         "id": "0P9LPNNxXOJk",
         "outputId": "dc131f5d-921e-4aa4-c1a6-de415c32d022"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1239,7 +1239,7 @@
         "id": "blcRonrkXQcZ",
         "outputId": "7dab660a-d3e4-4eda-f7ef-e6c4c612fcf8"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1266,7 +1266,7 @@
         "id": "rP9GBfP4XUgc",
         "outputId": "50243e0c-c50d-493a-b507-5de85c93c966"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1287,7 +1287,7 @@
       "metadata": {
         "id": "SwJDXO1lJVwB"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1304,7 +1304,7 @@
         "id": "oAbMB6oKXhk_",
         "outputId": "703d0e6b-e9f8-422c-df8b-0b6ae99a96b2"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1344,7 +1344,7 @@
       "metadata": {
         "id": "QqZeWDZQYCg0"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1360,7 +1360,7 @@
         "id": "Nvaj9j_hJVsi",
         "outputId": "989fa4f8-29d1-4aa3-c568-bd7902280294"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1387,7 +1387,7 @@
         "id": "jBQY8yIkJVo3",
         "outputId": "a151a819-5bb9-44f2-d85b-03ccd8d57fac"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1414,7 +1414,7 @@
         "id": "nZaT-lXtYJ7e",
         "outputId": "a5346fa5-1ce6-4f03-cecf-fbda497bab27"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1442,7 +1442,7 @@
         "id": "LMz8L1tzYPXO",
         "outputId": "d8dc16e0-37fb-4c2d-d9a2-abe030349a52"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1463,7 +1463,7 @@
       "metadata": {
         "id": "mDN6u0_qJVlb"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1475,7 +1475,7 @@
       "metadata": {
         "id": "1zpukTvvYf3s"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1490,7 +1490,7 @@
         "id": "RBxtkA3AYkF_",
         "outputId": "d9e26bfd-d9f2-40b5-82f3-08b5a1cf412a"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1516,7 +1516,7 @@
       "metadata": {
         "id": "-xTyZ_sCJViJ"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1531,7 +1531,7 @@
         "id": "kSRKO5WtYrkK",
         "outputId": "b8e8c477-4662-4625-e0d1-c0a4e5541fc0"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1560,7 +1560,7 @@
       "metadata": {
         "id": "Tt3JnRERJVey"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1577,7 +1577,7 @@
         "id": "xofwBVv9Y8pn",
         "outputId": "b359ec26-6a7a-4e8f-9a5f-ec28fa80b915"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1607,7 +1607,7 @@
         "id": "bgWCNec-JVbc",
         "outputId": "7e2f9d91-555d-4969-d4dc-687698f86699"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1630,13 +1630,13 @@
         "LatLong = namedtuple('LatLong', 'lat long')\n",
         "Metropolis = namedtuple('Metropolis', 'name cc pop coord')\n",
         "metro_areas = [Metropolis(name, cc, pop, LatLong(lat, long))\n",
-        "                for name, cc, pop, (lat, long) in metro_data]\n"
-        "name_lat = name_lat = attrgetter('name', 'coord.lat')"
+        "                for name, cc, pop, (lat, long) in metro_data]\n",
+        "name_lat = attrgetter('name', 'coord.lat')"
       ],
       "metadata": {
         "id": "UgJ-a0pHZm7H"
       },
-      "execution_count": 106,
+      "execution_count": 110,
       "outputs": []
     },
     {
@@ -1651,7 +1651,7 @@
         "id": "H6pILggzZbd9",
         "outputId": "9a34a167-4c0d-4abf-9a70-a2315e227a8f"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1677,7 +1677,7 @@
         "id": "I4fN-ln-ZdAK",
         "outputId": "662c73a7-2306-4cf8-b04a-2c2a7a9b7955"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1703,19 +1703,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dj2XvSGkZolU",
-        "outputId": "930fb709-22e1-497f-a2cc-72164dc3d237"
+        "outputId": "88baa4e3-6a1b-4780-a7a1-48cb326dd240"
       },
-      "execution_count": 108,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "('Delhi NCR', 28.613889)\n",
-            "('Mexico City', 19.433333)\n",
-            "('New York-Newark', 40.808611)\n",
             "('Sao Paulo', -23.547778)\n",
-            "('Tokyo', 35.689722)\n"
+            "('Mexico City', 19.433333)\n",
+            "('Delhi NCR', 28.613889)\n",
+            "('Tokyo', 35.689722)\n",
+            "('New York-Newark', 40.808611)\n"
           ]
         }
       ]
@@ -1734,7 +1734,7 @@
         "id": "7pcFdlAAaBzG",
         "outputId": "e89ca4b8-6156-4a84-f1ab-b72e1a00a182"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1759,7 +1759,7 @@
       "metadata": {
         "id": "8MdYqbBfJVVR"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1775,7 +1775,7 @@
         "id": "cLtuQdmIaa9L",
         "outputId": "3319996c-315b-4acc-d537-db6d70c7befa"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1805,7 +1805,7 @@
         "id": "IdKwO3yLacbv",
         "outputId": "77ad5e57-7402-4b70-cdc2-71805882820a"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1836,7 +1836,7 @@
         "id": "VHgQCj6Zadzh",
         "outputId": "9babfea9-9738-4fae-af6e-e2af6aa0ab84"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1869,7 +1869,7 @@
         "id": "eudyB5hJJVSP",
         "outputId": "15d9dc64-720a-4e60-e5f5-20cebc219fac"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1895,7 +1895,7 @@
         "id": "QI6RTPrfaq8x",
         "outputId": "b246dee8-9c79-46db-ce7e-e49ba7713880"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1919,7 +1919,7 @@
       "metadata": {
         "id": "8Me-qi6jJVPG"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1936,7 +1936,7 @@
         "id": "muWZ7BGBa01n",
         "outputId": "3818a895-029d-42be-e7d1-6385b662eea6"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1962,7 +1962,7 @@
         "id": "BizCQxDya1ve",
         "outputId": "61c247a0-c2be-4ab0-b86d-3de4a0b35b2a"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1986,7 +1986,7 @@
       "metadata": {
         "id": "3LFLTB_1JVLM"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2002,7 +2002,7 @@
         "id": "nxby4BFDbBY5",
         "outputId": "29d95f5a-ba78-419c-e7bf-bf6ca315b64a"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2031,7 +2031,7 @@
         "id": "1l9Dj4vXbCB5",
         "outputId": "092a1fd2-9697-426d-c220-c7db4da05381"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
